# chores

./: README.md  manage.py  pyproject.toml
chores/: asgi.py  settings.py  urls.py  wsgi.py
static/: styles.css
tasks/: domain.py  models.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_completed_last.py  0003_alter_task_completed_last.py  0004_task_frequency_days.py  0005_rename_completed_last_task_completed_last_date.py
tasks/static/: styles.css
tasks/templates/: task_base.html
tasks/templates/tasks/: task_form.html  task_list.html
